# VRX_1.2

./: .gitattributes  .~lock.ProceduresHistory.odt#  ProceduresHistory.odt  README.md  frames.gv  requiredChangesToStandardVRX.txt
Documents/Procedures/: HowToLidarDocking.odt  ProceduresHistory.odt
highLevelSystems/missionPlannerBiggie/high_to_low/src/: high_to_low_node.cpp  waypoints_to_waypoint.cpp
highLevelSystems/missionPlannerBiggie/the_planner/: CMakeLists.txt
highLevelSystems/missionPlannerBiggie/the_planner/launch/: the_planner.launch
highLevelSystems/missionPlannerBiggie/the_planner/src/: highLevelPlanner.cpp
highLevelSystems/missionPlannerBiggie/the_planner/yaml/: missions.yaml
highLevelSystems/visionSystemsBiggie/classifier/: CMakeLists.txt  package.xml
highLevelSystems/visionSystemsBiggie/classifier/launch/: classifier.launch  classifier_sim.launch  save_data.launch
highLevelSystems/visionSystemsBiggie/classifier/src/: classifier.cpp  save_data.cpp
highLevelSystems/visionSystemsBiggie/cluster_classifier/scripts/: classifier.py
highLevelSystems/visionSystemsBiggie/color_classification/: CMakeLists.txt  package.xml  readme
highLevelSystems/visionSystemsBiggie/color_classification/config/: newRecord.yaml
highLevelSystems/visionSystemsBiggie/color_classification/launch/: color_classification.launch  record_hist.launch
highLevelSystems/visionSystemsBiggie/color_classification/src/: .color_classification.cpp.swp  color_classification.cpp  color_classification.cpp.bkp  record_hist.cpp
highLevelSystems/visionSystemsBiggie/color_classification/srv/: color_classification.srv
highLevelSystems/visionSystemsBiggie/legacy/ocr/: CMakeLists.txt  ocr.launch  package.xml
highLevelSystems/visionSystemsBiggie/legacy/ocr/msg/: ocr.msg
highLevelSystems/visionSystemsBiggie/legacy/ocr/pics/: outputBW.txt  outputGRAY.txt
highLevelSystems/visionSystemsBiggie/legacy/ocr/src/: main.cpp
highLevelSystems/visionSystemsBiggie/legacy/sulu/: CMakeLists.txt  controller_manager.launch  experiment.launch  package.xml  start_tilt_controller.launch  tilt.yaml
highLevelSystems/visionSystemsBiggie/legacy/sulu/msg/: vision.msg
highLevelSystems/visionSystemsBiggie/legacy/sulu/src/: experiment.cpp  experiment.cpp.save  experiment.cpp.save.1  experiment.cpp.save.2  fullExperiment.cpp  lidarFramePublisher.cpp  tiltNnodder.cpp
highLevelSystems/visionSystemsBiggie/lidar_docking/: CMakeLists.txt  package.xml
highLevelSystems/visionSystemsBiggie/lidar_docking/src/: get_costmap.py  get_costmapB.py
highLevelSystems/visionSystemsBiggie/lidar_geofence/: CMakeLists.txt  README.md  package.xml
highLevelSystems/visionSystemsBiggie/lidar_geofence/scripts/: lidar_geofence.py
highLevelSystems/visionSystemsBiggie/rgbd_fusion/: CMakeLists.txt  package.xml
highLevelSystems/visionSystemsBiggie/rgbd_fusion/config/: config.yaml
highLevelSystems/visionSystemsBiggie/rgbd_fusion/launch/: rgbd_fusion.launch
highLevelSystems/visionSystemsBiggie/rgbd_fusion/msg/: object_image.msg  object_image_list.msg
highLevelSystems/visionSystemsBiggie/rgbd_fusion/src/: .rgbd_fusion_node.cpp.swo  rgbd_fusion_node.cpp  segment.cpp
highLevelSystems/visionSystemsBiggie/rgbd_fusion/srv/: segment.srv
highLevelSystems/visionSystemsBiggie/usv_ahc_py/: CMakeLists.txt
highLevelSystems/visionSystemsBiggie/yolo_detection/: CMakeLists.txt  package.xml
lowLevelSystems/lowLevelBiggie/qp_allocation/: CMakeLists.txt  package.xml
lowLevelSystems/lowLevelBiggie/vehicle_allocation/: CMakeLists.txt  README.md
lowLevelSystems/lowLevelBiggie/vehicle_control/: CMakeLists.txt  package.xml
lowLevelSystems/wamv_navigation/config/: costmap_common.yaml  costmap_common.yaml.orig  costmap_global.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml
lowLevelSystems/wamv_navigation/launch/: gmapping.launch  move_base.launch
lowLevelSystems/wamv_navigation/src/: multiple_goals.cpp  odom_to_base.cpp  path_to_goal.cpp  path_to_ned.cpp
vrx/.hg/: dirstate  undo.desc
vrx/.hg/cache/: branch2-served  hgtagsfnodes1
vrx/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
vrx/vrx_gazebo/launch/: dock.launch  docking.launch  my_vrx.launch  sandisland.launch  vrx.launch  vrx.launch.orig  vrx.launch.orig.orig
vrx/vrx_gazebo/worlds/: nav_challenge_single.world  perception_endless.world
vrx/wamv_gazebo/config/: rviz_armando.rviz  rviz_docking.rviz  rviz_vision.rviz  rviz_vrx.rviz  rviz_vrx.rviz.orig
vrx/wamv_gazebo/launch/: rviz_docking.launch
vrx/wamv_gazebo/urdf/: .wamv_gazebo.urdf.xacro.swp  wamv_gazebo.urdf.xacro
(+250 files in other folders)
