<?xml version="1.0"?>
<package>
  <name>ocr</name>
  <version>0.5.0</version>
  <description>The ocr package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
