<?xml version="1.0"?>
<package>
  <name>sulu</name>
  <version>1.5.0</version>
  <description>The sulu package</description>

  <maintainer email="tmoscicki2013@fau.edu">ubuntu</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
  </export>
</package>
